--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae harum voluptas cum incidunt a, saepe ut reprehenderit pariatur, ab maiores eius impedit rerum, maxime soluta. Iste commodi voluptatum explicabo ea?</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi totam repellendus consequatur beatae quo temporibus consequuntur harum, perspiciatis quas laborum ad quam ducimus aspernatur reprehenderit quia. Reprehenderit molestias facilis aspernatur!</h1>
+</body>
+</html>
