--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi totam repellendus consequatur beatae quo temporibus consequuntur harum, perspiciatis quas laborum ad quam ducimus aspernatur reprehenderit quia. Reprehenderit molestias facilis aspernatur!</h1>
+    <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi esse animi quod, minus natus cum culpa nemo temporibus eius voluptatibus enim velit ipsum laboriosam, minima harum, ad architecto reprehenderit quasi.</h1>
 </body>
 </html>
